@@ -42,7 +42,17 @@ public class YouKaiGoNinTeiKekTesuChiProcess extends BatchProcessBase<YouKaiGoNi
     private static final RString MYBATIS_SELECT_ID
             = new RString("jp.co.ndensan.reams.db.dbe.persistence.db.mapper.basic.youkaigoninteikekktesuchi"
                     + ".IYouKaiGoNinTeiKekTesuChiMapper.getCyouHyouSyuTsuRyoKu");
-
+    private static final int  通知文1 = 1;
+    private static final int  通知文2 = 2;
+    private static final int  通知文3 = 3;
+    private static final int  通知文4 = 4;
+    private static final int  通知文5 = 5;
+    private static final int  通知文6 = 6;
+    private static final int  通知文7 = 7;
+    private static final int  通知文8 = 8;
+    private static final int  通知文9 = 9;
+    private static final int  通知文10 = 10;
+    
     private YouKaiGoNinTeiKekTesuChiProcessParemeter paramter;
     private static final ReportId REPORT_ID = new ReportId(ItakusakiChosainIchiranReportId.REPORTID_DBE090001.getCode());
     private JohoTeikyoShiryoItem headItem;
@@ -82,7 +92,7 @@ public class YouKaiGoNinTeiKekTesuChiProcess extends BatchProcessBase<YouKaiGoNi
         eidtItem(t);
         DbT5301ShujiiIkenshoIraiJohoEntity entity = new DbT5301ShujiiIkenshoIraiJohoEntity();
         entity.setShinseishoKanriNo(new ShinseishoKanriNo(t.getShinseishoKanriNo()));
-        entity.setIkenshoIraiRirekiNo(new Integer(t.getIkenshoIraiRirekiNo().toString()));
+        entity.setIkenshoIraiRirekiNo(Integer.valueOf(t.getIkenshoIraiRirekiNo().toString()));
         entity.setNinteiJohoTeikyoYMD(new FlexibleDate(mybatisPrm.get認定状況提供日()));
         mapper.updateShuJiIkenSyoSaKuSeiIraiJyouHou(entity);
     }
@@ -102,26 +112,26 @@ public class YouKaiGoNinTeiKekTesuChiProcess extends BatchProcessBase<YouKaiGoNi
 //        RDate.getNowDate(), assembler.getImageFolderPath());
         RString 認証者氏名 = new RString("認証者氏名");
         RString 帳票名 = BusinessConfig.get(ItakusakiChosainIchiranReportId.REPORTID_DBE090001, SubGyomuCode.DBE認定支援);
-        RString 認定結果 = YokaigoJotaiKubun09.toValue(entity.getNijiHanteiYokaigoJotaiKubunCode()).get名称();
+        RString 認定結果 = YokaigoJotaiKubun09.toValue(entity.getNijiHanteiYokaigoJotaiKubunCod()).get名称();
 
         TsuchishoTeikeibunManager manager = new TsuchishoTeikeibunManager();
         List<TsuchishoTeikeibunEntity> tempList = manager.get通知書定型文パターン(REPORT_ID, SubGyomuCode.DBE認定支援).get通知書定型文List();
         headItem = new JohoTeikyoShiryoItem(RDate.getNowDate(), entity.getShichosonMeisho() // QA 539
-                , 認証者氏名, 帳票名, get通知文(tempList, 1)
+                , 認証者氏名, 帳票名, get通知文(tempList, 通知文1)
                 , entity.getHihokenshaName()
                 , entity.getJusho()
                 , new RDate(entity.getNijiHanteiYMD().toString())
                 , 認定結果, new RDate(entity.getNijiHanteiNinteiYukoKaishiYMD().toString())
                 , new RDate(entity.getNijiHanteiNinteiYukoShuryoYMD().toString())
-                , entity.getShinsakaiIken(), get通知文(tempList, 2)
-                , get通知文(tempList, 3)
-                , get通知文(tempList, 4)
-                , get通知文(tempList, 5)
-                , get通知文(tempList, 6)
-                , get通知文(tempList, 7)
-                , get通知文(tempList, 8)
-                , get通知文(tempList, 9)
-                , get通知文(tempList, 10));
+                , entity.getShinsakaiIken(), get通知文(tempList, 通知文2)
+                , get通知文(tempList, 通知文3)
+                , get通知文(tempList, 通知文4)
+                , get通知文(tempList, 通知文5)
+                , get通知文(tempList, 通知文6)
+                , get通知文(tempList, 通知文7)
+                , get通知文(tempList, 通知文8)
+                , get通知文(tempList, 通知文9)
+                , get通知文(tempList, 通知文10));
     }
 
     private RString get通知文(List<TsuchishoTeikeibunEntity> tempList, int index) {
